cicd/team_feat_tdp_201/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdp-backend-service
  namespace: feat-tdp-201
spec:
  selector:
    app: tdp-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
