cicd/team_feat_tdp_201/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdp-frontend-service
  namespace: feat-tdp-201
spec:
  selector:
    app: tdp-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4200
