cicd/team_feat_tdp_201/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tdp-ingress
  namespace: feat-tdp-201
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: tdp-feat-tdp-201.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tdp-frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: tdp-backend-service
                port:
                  number: 80
